fix z-index to font cover

--- a/styles/home/frame/default/_default.scss
+++ b/styles/home/frame/default/_default.scss
@@ -46,7 +46,7 @@
         width: 23%;
         left: 15.5%;
         bottom: 33%;
-        z-index: -1;
+        z-index: -2;
         animation: slide-right 1s ease-in-out;
 
         img {
